force-app/main/default/objects/Employment_History__c/Employment_History__c.object-meta.xml
<CustomObject>
    <description>ECM v1</description>
    <label>Employment History</label>
    <nameField>
        <displayFormat>EmploymentHistory-{0000}</displayFormat>
        <label>Employment History #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employment History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>