force-app/main/default/objects/Employment_History__c/fields/Benefit_Type__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Type__c</fullName>
    <label>Benefit Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Job will not (at any point) OFFER Health Insurance</fullName>
            </value>
            <value>
                <fullName>Job will (eventually) OFFER Health Insurance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>