force-app/main/default/objects/Employment_History__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <label>Client</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Employment History (Before TCP)</relationshipLabel>
    <relationshipName>Employment_History</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>