force-app/main/default/objects/Employment_History__c/fields/End_Date_Recorded__c.field-meta.xml
<CustomField>
    <fullName>End_Date_Recorded__c</fullName>
    <formula>not (ISBLANK( End_Date__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Date Recorded</label>
    <type>Checkbox</type>
</CustomField>