force-app/main/default/objects/Employment_History__c/fields/End_Reason__c.field-meta.xml
<CustomField>
    <fullName>End_Reason__c</fullName>
    <label>End Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Quit</fullName>
            </value>
            <value>
                <fullName>Fired</fullName>
            </value>
            <value>
                <fullName>Laid Off</fullName>
            </value>
            <value>
                <fullName>Not Known</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>