force-app/main/default/objects/Employment_History__c/fields/ETO_Employment_Status__c.field-meta.xml
<CustomField>
    <fullName>ETO_Employment_Status__c</fullName>
    <label>ETO Employment Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Full Time</fullName>
            </value>
            <value>
                <fullName>Part Time</fullName>
            </value>
            <value>
                <fullName>Seasonal</fullName>
            </value>
            <value>
                <fullName>Temporary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>