force-app/main/default/objects/Employment_History__c/fields/Latest_Hours__c.field-meta.xml
<CustomField>
    <fullName>Latest_Hours__c</fullName>
    <inlineHelpText>Per week</inlineHelpText>
    <label>Latest Hours</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>