force-app/main/default/objects/Employment_History__c/fields/Latest_Wage__c.field-meta.xml
<CustomField>
    <fullName>Latest_Wage__c</fullName>
    <inlineHelpText>Per hour</inlineHelpText>
    <label>Latest Wage</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>