force-app/main/default/objects/Employment_History__c/fields/Placed_by_Agency__c.field-meta.xml
<CustomField>
    <fullName>Placed_by_Agency__c</fullName>
    <label>Placed by Agency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes, provided lead</fullName>
            </value>
            <value>
                <fullName>Yes, did not provide lead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>