force-app/main/default/objects/Employment_History__c/fields/Previous_Employment__c.field-meta.xml
<CustomField>
    <fullName>Previous_Employment__c</fullName>
    <formula>True</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Previous Employment</label>
    <type>Checkbox</type>
</CustomField>