force-app/main/default/objects/Employment_History__c/fields/Wage_Type__c.field-meta.xml
<CustomField>
    <fullName>Wage_Type__c</fullName>
    <label>Wage Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Subsidized Job</fullName>
            </value>
            <value>
                <fullName>Unsubsidized Job</fullName>
            </value>
            <value>
                <fullName>Unpaid/Volunteer Job</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>